[gd_scene load_steps=14 format=3 uid="uid://dlhxqemr74r5x"]

[ext_resource type="Script" path="res://main.gd" id="1_dipbt"]
[ext_resource type="PackedScene" uid="uid://bhtgr8ljufoth" path="res://Camera/main_camera.tscn" id="2_7svat"]
[ext_resource type="PackedScene" uid="uid://cb173byqifwcg" path="res://Parts/32579_tohunga_skull.tscn" id="2_a8n1q"]
[ext_resource type="PackedScene" uid="uid://dba00bd1xr5mg" path="res://Parts/32577_tohunga_torso.tscn" id="3_upmsj"]
[ext_resource type="PackedScene" uid="uid://v303blvmjtlu" path="res://Parts/40507-tohunga_disc_throwing_arm.tscn" id="4_qmcj2"]
[ext_resource type="PackedScene" uid="uid://6rdjsh2tw2e" path="res://Parts/32576_tohunga_right_foot.tscn" id="6_4y7ja"]
[ext_resource type="PackedScene" uid="uid://bh2wrr4kkcgc5" path="res://Parts/32578-Tohunga Claw Arm.tscn" id="6_r8y0h"]
[ext_resource type="PackedScene" uid="uid://byfp6560wgmgm" path="res://Parts/32576_tohunga_left_foot.tscn" id="8_aw1v2"]
[ext_resource type="PackedScene" uid="uid://cxbw5kdxvgxlo" path="res://UI/color_selector.tscn" id="9_4y148"]
[ext_resource type="PackedScene" uid="uid://8ssx614xdxjh" path="res://UI/mask_selector.tscn" id="10_hqp6u"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_rppgt"]

[sub_resource type="Sky" id="Sky_m8oum"]
sky_material = SubResource("ProceduralSkyMaterial_rppgt")

[sub_resource type="Environment" id="Environment_wee1p"]
background_mode = 2
sky = SubResource("Sky_m8oum")
tonemap_mode = 2

[node name="Main" type="Node3D"]
script = ExtResource("1_dipbt")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wee1p")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 0, 0)
shadow_enabled = true

[node name="MainCamera" parent="." instance=ExtResource("2_7svat")]

[node name="32579-Tohunga Skull" parent="." instance=ExtResource("2_a8n1q")]
transform = Transform3D(1, 0, 0, 0, -1.19209e-07, 1, 0, -1, -1.19209e-07, 0, 0.190308, 0)

[node name="MaskAttachPoint" type="Marker3D" parent="32579-Tohunga Skull"]
transform = Transform3D(-4.37115e-08, -1, -3.57627e-07, 1, -4.37114e-08, -1.78814e-07, 1.78814e-07, -3.57627e-07, 1, 0, -0.489667, -0.00280707)

[node name="32577-Tohunga Torso" parent="." instance=ExtResource("3_upmsj")]

[node name="40507-Tohunga Disc Throwing Arm" parent="." instance=ExtResource("4_qmcj2")]
transform = Transform3D(7.54979e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, 7.54979e-08, -3.30012e-15, -0.399, -0.01, 0)

[node name="32578-Tohunga Claw Arm" parent="." instance=ExtResource("6_r8y0h")]
transform = Transform3D(1.78814e-09, 0, -0.01, 0, 0.01, 0, 0.01, 0, 1.78814e-09, 0.399423, -0.0102605, 0)

[node name="32576-Tohunga Right Foot" parent="." instance=ExtResource("6_4y7ja")]
transform = Transform3D(18.7939, 6.8404, 2.99003e-07, 0, -8.74228e-07, 20, 6.8404, -18.7939, -8.21505e-07, -0.2, -0.31, 0)

[node name="32576-Tohunga Left Foot" parent="." instance=ExtResource("8_aw1v2")]
transform = Transform3D(18.7939, -6.84039, -2.99003e-07, 0, -8.74228e-07, 20, -6.84039, -18.7939, -8.21506e-07, 0.2, -0.31, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_force_pass_scroll_events = false

[node name="ColorSelector" parent="UI" instance=ExtResource("9_4y148")]
layout_mode = 0

[node name="MaskSelector" parent="UI" instance=ExtResource("10_hqp6u")]
layout_mode = 0
offset_left = 996.0
offset_right = 1152.0

[connection signal="color_selected" from="UI/ColorSelector" to="." method="_on_color_selector_color_selected"]
[connection signal="part_selected" from="UI/ColorSelector" to="." method="_on_color_selector_part_selected"]
[connection signal="mask_scene_loaded" from="UI/MaskSelector" to="." method="_on_mask_selector_mask_scene_loaded"]
[connection signal="mask_selected" from="UI/MaskSelector" to="." method="_on_mask_selector_mask_selected"]
